# cpp-practice

./: readme.md
beginner/casino-guessing-game/: brainstrom.md  guessing-game
beginner/casino-guessing-game/casino-guessing-game/: Bank.cpp  Bank.h  Casino.cpp  Casino.h  (+6 more)
beginner/cgpa-calc/: cgpa
beginner/inventory/: CMakeLists.txt
beginner/inventory/builds/: CMakeCache.txt  Inventory  Inventory.db  Makefile  cmake_install.cmake
beginner/inventory/includes/: Database.h  Item.h
beginner/inventory/src/: Database.cpp  Item.cpp  main.cpp
beginner/login-registration/: .gitignore  login
beginner/rps/: rps
blackjack/: CMakeLists.txt
blackjack/arch_build/: Blackjack  CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
blackjack/arch_build/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
blackjack/includes/: Card.h  Dealer.h  Deck.h  Display.h  Game.h  Hand.h  Player.h
blackjack/src/: Card.cpp  Dealer.cpp  Deck.cpp  Display.cpp  Game.cpp  Hand.cpp  Player.cpp  main.cpp
boost-practice/client/: CMakeLists.txt
boost-practice/server/: CMakeLists.txt
file-generator/: CMakeLists.txt  file-extensions.txt
file-generator/includes/: Maker.h  Reader.h
file-generator/src/: Maker.cpp  Reader.cpp  main.cpp
file-organizer/: CMakeLists.txt  filer
file-organizer/includes/: Creator.h  Filer.h  Organizer.h
file-organizer/src/: Creator.cpp  Filer.cpp  Organizer.cpp  main.cpp
my-sql/: CMakeLists.txt  country-city-cityid.txt
my-sql/src/: main.cpp
raylib/intro/: CMakeLists.txt
raylib/ping-pong/: CMakeLists.txt
raylib/ping-pong/includes/: Ball.h
raylib/ping-pong/src/: Ball.cpp  main.cpp
tetris/lib/: movement.cpp  shapes.h  window.h
tetris/src/: main.cpp
tic-tac-toe/: .gitignore  tic-tac-toes
tic-tac-toe/src/: main.cpp
todo-program/: based.md  notes.md  test
todo-program/src/: main.cpp
(+10 files in other folders)
